# amalsharq

./: README.md  pyproject.toml
.github/workflows/: ci.yml
amalsharq/: hooks.py  modules.txt
amalsharq/fixtures/: property_setter.json
amalsharq/overrides/: location.py
amalsharq/public/js/: location.js  map_defaults.js
